<resources>
    <string name="app_name">WIAS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Mode</string>
    <string name="title_notifications">Setting</string>
    <!--sign out-->
    <string name="sign.out">Sign Out</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <!--login-->
    <string name="phone.number">Phone number</string>
    <string name="check.username.password">Check your username and password again</string>
    <string name="incorrect.phone.password">Incorrect phone or password</string>
    <string name="fail.login">Fail to login</string>
    <string name="login">Log in</string>
    <string name="forgot.psd">Forgot password?</string>
    <string name="sign.up">Sign up</string>
    <!--register-->
    <string name="name">Name</string>
    <string name="psd">Password</string>
    <string name="confirm.psd">Confirm password</string>
    <string name="next">Next</string>
    <string name="agree">Agree</string>
    <string name="register">Register</string>
    <string name="enter.verification">Please enter verification code</string>
    <string name="send.again">Send verification code again</string>
    <string name="sms.sent">An sms with verification code has sent to your phone</string>
    <string name="resend.second">Resend after %1$s seconds</string>
    <string name="psd.exp">Password must contain at least 6 characters and no white space</string>
    <string name="psd.match">Password should match.</string>
    <string name="verify">Verify</string>
    <!--forget psd-->
    <string name="enter.captcha">Enter Captcha</string>
    <string name="get.captcha">Get Captcha</string>
    <string name="enter.new.psd">Enter New Password</string>
    <string name="confirm.new.psd">Confirm New Password</string>
    <string name="reset">Reset</string>
    <string name="reset.psd">Reset Password</string>
    <string name="cannot.captcha">Your cannot get a captcha for this phone number again</string>
    <!--profile-->
    <string name="profile">Profile</string>
    <string name="change.password">Change Password</string>
    <string name="change.phonne">Change Phone Number</string>
    <string name="change.name">Change Username</string>
    <string name="device.list">Device List</string>
    <string name="add.device">Add New Device</string>
    <!--setting-->
    <string name="setting">Setting</string>
    <string name="input.old.psd">Enter Old Password</string>
    <string name="submit">Submit</string>
    <string name="not.set">Not Set</string>
    <string name="old.incorrect">Old Password Incorrect</string>
    <string name="changed">Changed</string>
    <string name="wifi">WiFi Name</string>
    <string name="search">Search</string>
    <!--bind-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reminder">Reminder</string>
    <string name="reminder.bind">Are you sure to bind this device?</string>
    <!--device info-->
    <string name="device.info">Detail</string>
    <string name="device.name">Name</string>
    <string name="device.id">ID</string>
    <string name="devie.sub">Sub</string>
    <string name="device.mac">MAC</string>
    <string name="device.role">Role</string>
    <string name="device.edit">Edit</string>
    <string name="role.1">Super User</string>
    <string name="role.2">Admin</string>
    <string name="role.3">User</string>
    <string name="unbind">Unbind</string>
    <string name="confirm.unbind">Are you sure to unbind?</string>
    <!--main page-->
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="on.off.system">Turn on/off Alarm</string>
    <string name="on.off.alert">Alert Ring</string>
    <string name="on.off.danger">Danger Ring</string>
    <string name="on.off.led">LED Flash</string>
    <!--mode-->
    <string name="peace">Peace Mode</string>
    <string name="panic">Panic Mode</string>
    <string name="away">Away Mode</string>
    <string name="work">Normal Mode</string>
    <!--setting-->
    <string name="danger.volume">Alarm Volume</string>
    <string name="led.speed">LED Brightness</string>
    <string name="noti">Notification</string>
    <string name="redirect">Redirect</string>
    <string name="trusted.contact">Trusted Contact</string>
    <string name="value">Value:%1$s</string>
    <string name="redirect.min">Redirect after %1$s minutes</string>
    <string name="noti.on.off">Notification: %1$s</string>
    <string name="add.contact">Add New</string>
    <string name="add">Add</string>
    <string name="fail.empty">Name or Phone is empty</string>
    <string name="delete">Delete</string>
    <string name="select.device">Select Device</string>
    <string name="sms.sent.contact">Message sent to trusted contacts</string>
    <string name="call">Call</string>
    <string name="sos">SOS</string>
    <string name="change">Change</string>
    <string name="change.ap">Change Access Point</string>
    <string name="bind.device.msg">Go to Setting > Add New Device</string>
</resources>
