<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/twenty_dp"
        android:paddingRight="@dimen/twenty_dp"
        android:paddingTop="@dimen/thirty_dp" >

        <EditText
            android:id="@+id/et_mobile"
            style="@style/register_edittext"
            android:hint="@string/phone.number"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_username"
            style="@style/register_edittext"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/et_password"
            style="@style/register_edittext"
            android:hint="@string/psd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/register_edittext"
            android:hint="@string/confirm.psd"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_warning"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/btn_next"
            style="@style/register_button"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>