<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/twenty_dp"
    android:padding="@dimen/fifteen_dp">
    <RelativeLayout
        android:padding="@dimen/five_dp"
        android:paddingEnd="@dimen/five_dp"
        android:background="@drawable/relativelayout_shape"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/s1"
            android:layout_width="@dimen/seekbar"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_action_style"
            android:layout_marginLeft="@dimen/ten_dp"
            android:text="@string/danger.volume"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:padding="@dimen/five_dp"
        android:paddingEnd="@dimen/five_dp"
        android:background="@drawable/relativelayout_between_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/s2"
            android:layout_width="@dimen/seekbar"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_action_style"
            android:layout_marginLeft="@dimen/ten_dp"
            android:text="@string/led.speed"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:padding="@dimen/five_dp"
        android:paddingEnd="@dimen/five_dp"
        android:background="@drawable/relativelayout_between_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.SwitchCompat
            android:layout_marginLeft="@dimen/ten_dp"
            android:id="@+id/sw_noti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textOff="@string/off"
            android:textOn="@string/on"
            app:showText="true"
            android:checked="true"
            android:textColor="@color/colorAccent"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_action_style"
            android:layout_marginLeft="@dimen/ten_dp"
            android:text="@string/noti"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="@dimen/five_dp"
        android:paddingEnd="@dimen/five_dp"
        android:background="@drawable/relativelayout_borderless_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_redirect"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_width="@dimen/login_icon_width"
            android:layout_height="wrap_content"
            android:entries="@array/redirect">
        </android.support.v7.widget.AppCompatSpinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_action_style"
            android:layout_marginLeft="@dimen/ten_dp"
            android:text="@string/redirect"
            android:layout_toEndOf="@id/sw_led"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <View
        android:layout_marginTop="@dimen/twenty_dp"
        style="@style/grey_line_style"/>
    <RelativeLayout
        android:id="@+id/rl_trusted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_item_select"
        android:padding="@dimen/ten_dp">
        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/detail_icon"
            android:layout_height="@dimen/detail_icon"
            android:src="@drawable/ic_trusted"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_toRightOf="@id/iv_icon"
            android:text="@string/trusted.contact"
            style="@style/detail_item_actionname"/>

        <ImageView
            android:src="@drawable/ic_right_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <View
        android:id="@+id/detail_item_line"
        style="@style/grey_line_style"/>

</LinearLayout>